[package]
name = "meld"
version = "0.1.0"
edition = "2021"
description = "a meld client written in Rust"
authors = ["drew <drew@parker.systems>"]
readme = "README.md"
license = "MIT"

[dependencies]
structopt = "^0.3.26"
rusqlite = "0.27.0"
serial_test = "^0.6.0"
sha2 = "^0.10.2"
hex = "0.4.3"
path_abs = "0.5.1"
