[package]
name = "meld"
version = "0.1.0"
edition = "2021"
description = "a meld client written in Rust"
authors = ["drew <drew@parker.systems>"]
readme = "README.md"
license = "MIT"

[lib]
name = "libmeld"
path = "src/lib/lib.rs"

[[bin]]
name = "meld"
path = "src/main.rs"

[dependencies]
structopt = "*"
snafu = "*"
env_logger = "*"
log = "*"
path-clean = "*"
sha2 = "*"
walkdir = "*"

# Enable bundle of sqlite library
[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]


