[package]
name = "meld"
version = "0.1.0"
edition = "2021"
description = "a meld client written in Rust"
authors = ["drew <drew@parker.systems>"]
readme = "README.md"
license = "MIT"

[lib]
name = "libmeld"
path = "src/lib/lib.rs"

[[bin]]
name = "meld"
path = "src/main.rs"

[dependencies]
structopt = "0.3.26"
snafu = "0.7.1"
env_logger= "0.9.0"
log = "0.4.17"
path-clean = "0.1.0"
sha2 = "0.10.2"
walkdir = "2.3.2"

# Enable bundle of sqlite library
[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]


